fixed user/message count being too light of a color

--- a/src/assets/sass/libraries/_utility_styles.sass
+++ b/src/assets/sass/libraries/_utility_styles.sass
@@ -18,7 +18,7 @@ h1, h2, h3, h4
     top: 1rem;
     right: 5px;
     font-size: $small-font;
-    color: $brand-secondary-color;
+    color: $black-color;
 
 .btn
   background-color: $brand-primary-color;
